# superinstance-live

./: .gitignore  AGENT.md  INTEGRATION.md  README.md  pyproject.toml
memory/: JOURNAL.md
superinstance_live/: __init__.py  cli.py  constraint_host.py  midi_clock.py  osc_bridge.py  session.py  transport.py
tests/: __init__.py  test_constraint_host.py  test_constraint_host_extended.py  test_midi_clock.py  test_midi_clock_extended.py  test_osc_bridge.py  test_osc_bridge_extended.py  test_session.py  test_session_extended.py  test_transport.py  test_transport_extended.py
