[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superinstance-live"
version = "0.1.0"
description = "DAW-agnostic session controller for constraint music systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3",
    "python-osc>=1.10",
]

[project.scripts]
superinstance-live = "superinstance_live.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["superinstance_live"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
